gcc/testsuite/rust/rustc/ui/operator-recovery/less-than-greater-than.rs
fn main() {
    println!("{}", 1 <> 2);
// { dg-error "" "" { target *-*-* } .-1 }
}

